# notion_todoist_syncer

./: .gitignore  Dockerfile  LICENSE  README.md  logging.json  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: docker-image.yml  python-app.yml
objects/: NotionTask.py  NotionTodoistSyncer.py  NotionWrapper.py  TodoistNotionSyncer.py  TodoistWrapper.py
objects/helpers/: cache.py  configuration.py
