[project]
authors = [
  {name = "Greg James"},
]
dependencies = [
  "anyio==4.4.0",
  "certifi==2024.8.30",
  "charset-normalizer==3.3.2",
  "h11==0.14.0",
  "httpcore==1.0.5",
  "httpx==0.27.2",
  "idna==3.10",
  "notion-client==2.2.1",
  "python-dateutil==2.9.0.post0",
  "requests==2.32.3",
  "six==1.16.0",
  "sniffio==1.3.1",
  "todoist-api-python==2.1.7",
  "urllib3==2.2.3",
]
description = "A self-hosted bidirectional Syncer for Notion and Todoist."
name = "notion-todoist-syncer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
